Fixed button spacing and added hover behaviour

--- a/src/cs221/GP01/resource/css/BaseStyle.css
+++ b/src/cs221/GP01/resource/css/BaseStyle.css
@@ -26,4 +26,8 @@
     -fx-pref-width:600;
 }
 
+.button {
+    -fx-cursor: hand;
+}
+
 
