--- a/src/cs221/GP01/resource/css/Start.css
+++ b/src/cs221/GP01/resource/css/Start.css
@@ -30,9 +30,18 @@
     -fx-pref-width: 300px;
     -fx-pref-height: 50px;
     -fx-background-color: -fx-tertiary-color;
-    -fx-text-fill: white;
+    -fx-text-fill: #cecece;
     -fx-font-size: 18px;
-    -fx-alignment: center-left;
+    -fx-alignment: center;
+    -fx-background-image: url("../img/icon/icon32.png");
+    -fx-background-size: 32 32;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: left;
+    -fx-background-insets: 0 0 0 -10, 0, 0, 0;
+}
+
+.button:hover{
+    -fx-text-fill: white;
 }
 
 /* Footer of each scene*/
@@ -41,4 +50,8 @@
     -fx-pref-height: 80px;
     -fx-alignment: center;
     -fx-spacing: 30px;
+}
+
+.footerIcon{
+    -fx-cursor: hand;
 }
